# WebGnomeAPI

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.orig  MANIFEST.in  README.rst  build_requirements_file.py  conda2pixi_reqs.py  conda_requirements.txt  conda_requirements_all.txt  config-example.ini  config-test.ini  deploy_requirements.txt  docker-compose.yml  dockerfile  dockerfile.mono  dockerfile.proxy  environment.lock.yaml  generate_env.sh  make_conda_environment.sh  mono-config-client-dev.json  mono-config-client-prod.json  mono-config-client.json  mono-config.ini  oauth2_credentials.json  pixi.toml  prune_old_session_folders.sh  prune_old_tmp_files.sh  pyproject.toml  setup.py  setup_old.py
ansible/hosts/: prod-vmware.yml  stage-vmware.yml
ansible/playbooks/: deploy.yml  get-container-logs.yml
config_files/: api_config.ini  config-test.ini  crontab  docker_entrypoint.sh  nginx.conf  supervisord-api.conf  supervisord-aws_mirror_matrix.conf  supervisord-client.conf  supervisord-crond.conf  supervisord.conf
help/views/form/: diffusion.rst  model.rst  weatherers.rst
help/views/form/mover/: goods.rst  grid_current.rst  grid_wind.rst  subset.rst  upload.rst
help/views/form/spill/: continue.rst  spatial.rst  (+1 more)
location_files/: compile_locations.py
location_files/boston_and_vicinity/boston_and_vicinity_save/: MerrimackMassCoastOSSM.txt
scripts/: acquire_redis_lock.py  aws-mirror-matrix-to-efs.sh  aws-mirror-matrix.sh  aws-purge-old-forcasts.sh  aws-purge-old-nowcasts.sh  release_redis_lock.py
terraform/: README.md
terraform/aws/: main.tf
terraform/vmware/: main.tf
webgnome_api/: __init__.py
webgnome_api/common/: common_object.py  helpers.py  session_management.py  views.py
webgnome_api/scripts/: gmail_utils.py
webgnome_api/socket/: sockserv.py
webgnome_api/tests/: base.py  pytest.ini  pytest.toml  test_goods.py  test_hello.py  test_load.py  test_model.py  test_model_runs.py  test_mover.py  test_outputter.py  test_release.py  test_step.py
webgnome_api/tweens/: py_gnome.py
webgnome_api/views/: deployed_environment.yaml  diagnostic_info.py  environment.py  export.py  goods.py  hello.py  help.py  load_save.py  model.py  mover.py  outputter.py  release.py  session.py  socket_step.py  substance.py  upload_manager.py
(+13 files in other folders)
